Commit before removing ThymeleafServiceTest tests